# soulpull

./: .gitignore  Cargo.toml  README.md  config.example.toml  example.csv
.github/workflows/: release.yml
src/: config.rs  main.rs
src/resolver/: aggregator.rs  mod.rs  musicbrainz.rs
src/slsk/: client.rs  download.rs  mod.rs  runner.rs  scorer.rs  search.rs
src/sources/: csv.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs
src/tui/views/: config.rs  mod.rs  queue.rs  setup.rs  summary.rs
