[package]
name = "soulpull"
version = "0.1.0"
edition = "2021"
description = "Terminal-based music acquisition tool for the Soulseek peer-to-peer network"
license = "MIT"

[[bin]]
name = "soulpull"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
csv = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
